--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 
 android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.example.androiddevchallenge"
+        applicationId "com.cedric.petadoption"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
@@ -15,6 +16,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+
 
     signingConfigs {
         // We use a bundled debug keystore, to allow debug builds from CI to be upgradable
@@ -36,8 +39,13 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildFeatures {
@@ -56,26 +64,48 @@ android {
     }
 
     packagingOptions {
-        // Multiple dependency bring these files in. Exclude them to enable
-        // our test APK to build (has no effect on our AARs)
-        excludes += "/META-INF/AL2.0"
-        excludes += "/META-INF/LGPL2.1"
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
     }
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation "androidx.activity:activity-compose:1.3.0-alpha03"
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
 
-    testImplementation 'junit:junit:4.13.2'
+    //Accompanist
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.0"
+    implementation "dev.chrisbanes.accompanist:accompanist-insets:0.6.0"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    //Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.30"
+
+    //Activity
+    implementation "androidx.activity:activity-compose:1.3.0-alpha03"
+
+    //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02"
+
+    //ContraintLayout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
+
+    //Compose
+    implementation "androidx.compose.foundation:foundation:1.0.0-beta01"
+    implementation "androidx.compose.foundation:foundation-layout:1.0.0-beta01"
+    implementation "androidx.compose.ui:ui:1.0.0-beta01"
+    implementation "androidx.compose.ui:ui-util:1.0.0-beta01"
+    implementation "androidx.compose.runtime:runtime:1.0.0-beta01"
+    implementation "androidx.compose.material:material:1.0.0-beta01"
+    implementation "androidx.compose.animation:animation:1.0.0-beta01"
+    implementation "androidx.compose.ui:ui-tooling:1.0.0-beta01"
+    implementation "androidx.compose.material:material-icons-extended:1.0.0-beta01"
+
+    //AndroidX
+    implementation "androidx.core:core-ktx:1.5.0-beta02"
+
+    //Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
 }
