--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -37,8 +37,26 @@ plugins {
 subprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+
+        maven {
+            url "https://kotlin.bintray.com/kotlinx"
+        }
+
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+
     }
+
+    /*tasks.withType(KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = '1.8'
+            allWarningsAsErrors = true
+            // Opt-in to experimental compose APIs
+            freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
+            // Enable experimental coroutines APIs, including collectAsState()
+            freeCompilerArgs += '-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi'
+        }
+    /}*/
 
     apply plugin: 'com.diffplug.spotless'
     spotless {
